<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">


    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never" />

    <item android:id="@+id/salvar"
        android:title="@string/salvar"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/notificacao"
        android:title="@string/notificacao"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/sair"
        android:title="@string/sair"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
