<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    tools:context="br.com.mrcsfelipe.markfulldroid.activitys.SalvarActivity"
    android:layout_width="wrap_content">


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cadastrar"
                android:textSize="50dp"
                android:layout_span="2"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#5878ff" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/nome"
                android:padding="3dip" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_nome"
                android:layout_column="1" />

        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/dt_nascimento"
                android:padding="3dip" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/ed_dt_nascimento" />

        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/btnCadastrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar"
                android:onClick="cadastrar"/>
        </TableRow>
    </TableLayout>

</LinearLayout>
